# python_ml_template

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: init.sh
.github/workflows/: bootstrap_project.yml  copilot_code_review.yml  create-tag.yml  lintinig.yml  release.yml
