[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
# This configuration tells build tools like pip to use setuptools
# for building your package, and setuptools will in turn use your
# setup.py file for the build instructions and metadata.
# Ensure you have a setup.py file in the root of your project.

[project]
name = "project_name"
version = "0.1.0"
authors = [
    {name = "Saradindu Sengupta"},
]
